Fixes #4223 - Move WebXmlXXX classes to web.xml extension